feat: added steam connection and wishlist download
